# brainvis

./: README.md  pyproject.toml
brain_vis/: __init__.py  overlay.py  regions.py  rgba.py  sunburst_app.py
brain_vis.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
